@@ -6,6 +6,7 @@ export(CompoundIdFilter)
 export(CompoundNameFilter)
 export(MsmsMzRangeMaxFilter)
 export(MsmsMzRangeMinFilter)
+export(adducts)
 export(compound_tbl_lipidblast)
 export(compound_tbl_sdf)
 export(compounds)
@@ -15,9 +16,11 @@ export(expandMzIntensity)
 export(hasMsMsSpectra)
 export(import_mona_sdf)
 export(make_metadata)
+export(mass2mz)
 export(matchWithPpm)
 export(msms_spectra_hmdb)
 export(msms_spectra_mona)
+export(mz2mass)
 export(src_compdb)
 export(tables)
 exportClasses(CompDb)
