@@ -4,6 +4,5 @@
 .onLoad <- function(libname, pkgname) {
     dta <- as.data.frame(rbind(commonMZ::MZ_CAMERA("pos", warn_clash = FALSE),
                                commonMZ::MZ_CAMERA("neg", warn_clash = FALSE)))
-    rownames(dta) <- dta$name
     assign("ADDUCTS", dta, envir = asNamespace(pkgname))
 }
